# gp

./: pyproject.toml
.github/workflows/: build.sh  ci-rust.yml  ci.yml  manual_build.sh  maturin.yml  poetry.yml  pydiscovery.py
gp/actors/data/: _data.py  data_autolabel.py
gp/actors/el/: cangen.py  canrank.py
gp/actors/sm/: can_graph.py  graph_inference.py
gp/distantsupervision/datasets/: s02_make_autolabel.ipynb
gp/entity_linking/candidate_generation/: common.py  oracle_model.py
gp/misc/: conversions.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
tests/: test_import.py
